fix: header text overflow
for reeal this time guys I swear

--- a/packages/frontend/src/styles.scss
+++ b/packages/frontend/src/styles.scss
@@ -235,7 +235,3 @@ video {
 .force-comic-sans {
   font-family: 'Comic Sans MS', cursive, sans-serif;
 }
-
-.max-w-80 {
-  max-width: 80%;
-}
